--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -731,7 +731,7 @@ button:hover {
     bottom: 20px;
     right: 20px;
     z-index: 9999;
-    background-color: red; /* Test için kırmızı bırakıyoruz */
+    background-color: #ffffff; /* Test için kırmızı bırakıyoruz */
     color: white;
     padding: 12px 16px;
     border: none;
