--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -35,6 +35,18 @@
         I value clean, efficient code and enjoy bringing ideas to life through both logic and design.
         Whether it's building scalable software or exploring visual creativity, I'm driven by curiosity and craftsmanship.
       </p>
+<div>
+        {% if cv %}
+
+{% endif %}
+
+    <a href="{{ cv.file.url }}" target="_blank" class="cv-button">
+View CV
+    </a>
+</div>
+
+
+
     </div>
   </div>
 </section>
